traces/bug_847.txt
examples++-load/medit.cpp:2435: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/medit.cpp:2435:1: initialization of callDoLoadInit
2433.   
2434.   // [[file:include/InitFunct.hpp::LOADFUNC]]
2435. > LOADFUNC(Load_Init)

examples++-load/medit.cpp:2435:1: call to DoLoadInit
2433.   
2434.   // [[file:include/InitFunct.hpp::LOADFUNC]]
2435. > LOADFUNC(Load_Init)

examples++-load/medit.cpp:2435:1: call to addInitFunct
  2433.   
  2434.   // [[file:include/InitFunct.hpp::LOADFUNC]]
  2435. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
